App/Backend/Ingress/ingress.yaml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-packersmovers-service
  labels:
    app: packersmovers
  annotations:
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-04fc60a7dd404ed9c, subnet-0ddad32b336f6befe, subnet-02c489c95e6b47dae  
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:eks:us-east-2:851725229101:cluster/Eks-cluster

    
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: customer-service
            port:
              number: 8080
        path: /customer*
        pathType: ImplementationSpecific
